fit_predictor/mkp_aco/evaluates/run14/2025-01-27_08-27-23/evaluations/problem_eval674876269235737556_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 7
    heuristics = prize / np.minimum(1, np minimum(1, low_ratio_weights, axis=1) * min_weight)
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
